# sbs-ext

./: .gitignore  AGENTS.md  DEPLOYMENT.md  EDITOR-SPEC.md  README.md  TECHNOTE.md  editor.sh  pyproject.toml  render_samples.sh  sbs-1.0.md  sbs-1.1.md
prototype/bridge/: bridge-widget.js  index.html  layout-demo.html  layout.css  main.js  pbn-parser.js  style.css
prototype/chess/: chess-renderer.js  chess-widget.js  eco-dictionary.js  eco-dictionary.json  game-logic.js  index.html  main.js  style.css
prototype/chess/data/: eco-zh-wikipedia.json  eco-zh.json  eco-zh_wikipedia.md
prototype/chess/scripts/: build-eco-table.mjs  convert-eco-zh-wikipedia.mjs
prototype/go/: go-board.js  index.html  main.js  style.css
src/sbs_editor/: main.py  snippets.py
src/sbs_editor/static/: index.html
src/sbs_renderer/: __init__.py  __main__.py  bridge.py  chess.py  go.py  image_attrs.py  renderer.py  sticky.py  utils.py
tests/: test_renderer.py
tests/markdown/: bridge-demo.md  bridge-scenarios.md  bridge-sticky-layout.md  chess-demo.md  chess-sticky-layout.md  go-demo.md  go-sticky-layout.md  image-attrs.md  plain.md
widgets/: image-attrs.js  index.js  sbs-ext.css  sticky.css
widgets/bridge/: bridge-component.js  bridge-widget.js  index.js  pbn-parser.js
widgets/chess/: chess-component.js  chess-widget.js  demo.html  demo.js  eco-dictionary.js  game-logic.js  index.js
widgets/go/: go-board.js  go-component.js  go-game.js  go-widget.js  index.js  sgf-parser.js
widgets/shared/: lightdom.js
widgets/themes/: classic.css  default.css
